<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/home_grey">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/created_toogleButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:orientation="vertical"
            android:background="@drawable/calender_button_selector">
            <TextView
                android:id="@+id/createdText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/created_text"
                android:textSize="18sp"
                style="@style/date_button_style"/>
            <TextView
                android:id="@+id/createdDate"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sample_date"
                android:textSize="10sp"
                android:textAllCaps="true"
                android:textStyle="italic"
                android:paddingTop="5dp"
                style="@style/date_button_style"
                />
        </LinearLayout>

        <Button
            android:id="@+id/edit_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit_btn"
            android:background="@color/edit_btn"
            android:textColor="#fff"/>
        <LinearLayout
            android:id="@+id/updated_toogleButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:orientation="vertical"
            android:background="@drawable/calender_button_selector">
            <TextView
                android:id="@+id/updatedText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/updated_text"
                android:textSize="18sp"
                style="@style/date_button_style"/>
            <TextView
                android:id="@+id/updatedDate"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sample_date"
                android:textSize="10sp"
                android:textAllCaps="true"
                android:textStyle="italic"
                android:paddingTop="5dp"
                style="@style/date_button_style"
                />
        </LinearLayout>

    </LinearLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:background="@color/calendar_color" />

    <EditText
        android:id="@+id/title_text"
        android:layout_weight=".03"
        android:singleLine="true"
        android:textSize="15sp"
        style="@style/add_journal_edit"
        android:hint="@string/title_hint"/>

    <EditText
        android:layout_weight=".4"
        android:id="@+id/editNoteView"
        style="@style/add_journal_edit"
        android:hint="@string/entry_hint"/>

</LinearLayout>